@@ -1,3 +1,10 @@
+2012-04-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCsymt.c (newBoolLink): return bool instead of bit if no
+	  bit memory.
+	* src/hc08/gen.c: Fixed no register assigned to iTemp for IFX.
+	  Guarded more instances of emitLabel for dry run
+
 2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/hc08/gen.c:
